--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "ejs": "^3.1.10"
   }
 }
