--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "ejs": "^3.1.10"
+    "ejs": "^3.1.10",
+    "express-session": "^1.18.1"
   }
 }
