--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "csurf": "^1.10.0",
     "ejs": "^3.1.10",
     "express-session": "^1.18.1",
     "mysql2": "^3.13.0"
